# qobuz-dl

./: README.md  flake.nix  pyproject.toml
qobuz_dl/: cli.py  core.py  downloader.py  utils.py
